Implement deadlock retry mechanism in database transactions and enhance booking service with improved cache management